# rust-uniffi-rn-demo

./: Cargo.toml  Makefile  README.md  build.rs  rust-toolchain.toml  uniffi.toml
examples/demo/: package-lock.json  package.json
ios/Demo/: .gitignore  Package.swift
ios/Demo/Sources/Demo/: Demo.swift
ios/Demo/Tests/DemoTests/: DemoTests.swift
rn/demo-rn/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  demo-rn.podspec  package.json  tsconfig.json
rn/demo-rn/android/: build.gradle  gradle.properties
rn/demo-rn/android/src/main/: AndroidManifest.xml
rn/demo-rn/android/src/main/java/com/demorn/: DemoRnModule.kt  DemoRnPackage.kt
rn/demo-rn/example/: app.json  package.json
rn/demo-rn/example/android/: settings.gradle
rn/demo-rn/example/ios/: .xcode.env  File.swift  Podfile
rn/demo-rn/example/src/: App.tsx
rn/demo-rn/ios/: DemoRn.mm  DemoRn.swift  demo.swift
rn/demo-rn/src/: index.tsx
src/: demo.udl  lib.rs
